talent-app/main/default/objects/Project_Skill__c/Project_Skill__c.object-meta.xml
<CustomObject>
    <label>Project Skill</label>
    <nameField>
        <label>Code Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>