talent-app/main/default/objects/Project_Skill__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Project Skill</relationshipLabel>
    <relationshipName>Project_Skill</relationshipName>
    <type>Lookup</type>
</CustomField>