talent-app/main/default/objects/Project_Skill__c/fields/Employee_Project__c.field-meta.xml
<CustomField>
    <fullName>Employee_Project__c</fullName>
    <label>Employee Project</label>
    <referenceTo>Employee_Project__c</referenceTo>
    <relationshipLabel>Project Skill</relationshipLabel>
    <relationshipName>Project_Skill</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>