talent-app/main/default/objects/Project_Skill__c/fields/Employee_Ref__c.field-meta.xml
<CustomField>
    <fullName>Employee_Ref__c</fullName>
    <formula>Employee_Project__r.Employee__r.Name</formula>
    <label>FML Employee</label>
    <type>Text</type>
</CustomField>