talent-app/main/default/objects/Project_Skill__c/fields/Employee_Skill__c.field-meta.xml
<CustomField>
    <fullName>Employee_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Skill</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employee_Skill__c.Employee__c</field>
            <operation>equals</operation>
            <valueField>$Source.Employee__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee_Skill__c</referenceTo>
    <relationshipLabel>Project Skill</relationshipLabel>
    <relationshipName>Project_Skill</relationshipName>
    <type>Lookup</type>
</CustomField>