talent-app/main/default/objects/Project_Skill__c/fields/Skil_Level_Disp__c.field-meta.xml
<CustomField>
    <fullName>Skil_Level_Disp__c</fullName>
    <formula>Skill_Level__r.Skill_Num__c</formula>
    <label>FML Skil Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>