talent-app/main/default/objects/Project_Skill__c/fields/Skill_Label_Ref__c.field-meta.xml
<CustomField>
    <fullName>Skill_Label_Ref__c</fullName>
    <formula>Employee_Skill__r.Skill__r.Name + "    " + TEXT(Skill_Level__r.Skill_Num__c)</formula>
    <label>FML Skill Label</label>
    <type>Text</type>
</CustomField>