talent-app/main/default/objects/Project_Skill__c/fields/Skill_Name_Disp__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name_Disp__c</fullName>
    <formula>Employee_Skill__r.Skill__r.Name</formula>
    <label>FML Skill Name</label>
    <type>Text</type>
</CustomField>