talent-app/main/default/objects/Project_Skill__c/fields/Skill_Value_Ref__c.field-meta.xml
<CustomField>
    <fullName>Skill_Value_Ref__c</fullName>
    <formula>Employee_Skill__r.Skill__c + ";" + Employee_Skill__r.Skill__r.Name + ";" + Skill_Level__c + ";" + TEXT(Skill_Level__r.Skill_Num__c)</formula>
    <label>FML Skill Value</label>
    <type>Text</type>
</CustomField>