talent-app/main/default/objects/Project_Skill__c/listViews/List1.listView-meta.xml
<ListView>
    <fullName>List1</fullName>
    <columns>Employee__c</columns>
    <columns>Employee_Project__c</columns>
    <columns>NAME</columns>
    <columns>Skill_Name_Disp__c</columns>
    <columns>Skil_Level_Disp__c</columns>
    <filterScope>Everything</filterScope>
    <label>List</label>
</ListView>